[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/menus/file_menu/file_menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/menus/popup_tools/popup_tools.tscn" type="PackedScene" id=2]
[ext_resource path="res://levels/sandbox/sandbox.gd" type="Script" id=3]
[ext_resource path="res://Levels/Base/Level.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Menus/Elements/Elements.tscn" type="PackedScene" id=5]
[ext_resource path="res://levels/sandbox/objects.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Base/Camera/camera_2d.tscn" type="PackedScene" id=7]

[node name="Sandbox" instance=ExtResource( 4 )]
script = ExtResource( 3 )
type = 2

[node name="Elements" parent="CanvasLayer" index="0" instance=ExtResource( 5 )]

[node name="PopupTools" parent="CanvasLayer" index="1" instance=ExtResource( 2 )]

[node name="LevelMenu" parent="CanvasLayer" index="2"]
margin_left = 0.0
margin_bottom = 0.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" parent="CanvasLayer/LevelMenu" index="0"]
margin_right = 245.0
text = "Sandbox"

[node name="Info" parent="CanvasLayer/LevelMenu" index="1"]
margin_right = 245.0
margin_bottom = 92.0

[node name="Label" parent="CanvasLayer/LevelMenu/Info" index="0"]
margin_right = 245.0

[node name="FileMenu" parent="CanvasLayer/LevelMenu/Info" index="1" instance=ExtResource( 1 )]
margin_top = 24.0
margin_bottom = 44.0

[node name="Back" parent="CanvasLayer/LevelMenu/Info" index="2"]
margin_top = 48.0
margin_right = 245.0
margin_bottom = 68.0

[node name="HideButton" parent="CanvasLayer/LevelMenu" index="2"]
margin_top = 96.0
margin_right = 245.0
margin_bottom = 116.0

[node name="Objects" parent="." index="1"]
script = ExtResource( 6 )

[node name="Camera2D" parent="." index="2" instance=ExtResource( 7 )]

[connection signal="button_pressed" from="CanvasLayer/Elements" to="Objects" method="_on_Elements_button_pressed"]
[connection signal="element_added" from="CanvasLayer/Elements" to="Objects" method="_on_Elements_element_added"]
[connection signal="sprite_hided" from="CanvasLayer/Elements" to="Cursor" method="_on_Elements_sprite_hided"]
[connection signal="sprite_showed" from="CanvasLayer/Elements" to="Cursor" method="_on_Elements_sprite_showed"]
[connection signal="clone_pressed" from="CanvasLayer/PopupTools" to="Objects" method="_on_PopupTools_clone_pressed"]
[connection signal="delete_pressed" from="CanvasLayer/PopupTools" to="Objects" method="_on_PopupTools_delete_pressed"]
[connection signal="flip_pressed" from="CanvasLayer/PopupTools" to="Objects" method="_on_PopupTools_flip_pressed"]
[connection signal="unlink_pressed" from="CanvasLayer/PopupTools" to="Objects" method="_on_PopupTools_unlink_pressed"]
[connection signal="sprite_hided" from="CanvasLayer/LevelMenu" to="Cursor" method="_on_LevelMenu_sprite_hided"]
[connection signal="sprite_showed" from="CanvasLayer/LevelMenu" to="Cursor" method="_on_LevelMenu_sprite_showed"]
[connection signal="element_added" from="CanvasLayer/LevelMenu/Info/FileMenu" to="Objects" method="_on_FileMenu_element_added"]
[connection signal="elements_deleted" from="CanvasLayer/LevelMenu/Info/FileMenu" to="Objects" method="_on_FileMenu_elements_deleted"]
[connection signal="file_loaded" from="CanvasLayer/LevelMenu/Info/FileMenu" to="Camera2D" method="_on_FileMenu_file_loaded"]
[connection signal="file_name_changed" from="CanvasLayer/LevelMenu/Info/FileMenu" to="CanvasLayer/LevelMenu" method="_on_FileMenu_file_name_changed"]
[connection signal="menu_hided" from="CanvasLayer/LevelMenu/Info/FileMenu" to="CanvasLayer/LevelMenu" method="_on_FileMenu_menu_hided"]
[connection signal="sprite_hided" from="CanvasLayer/LevelMenu/Info/FileMenu" to="Cursor" method="_on_FileMenu_sprite_hided"]
[connection signal="sprite_showed" from="CanvasLayer/LevelMenu/Info/FileMenu" to="Cursor" method="_on_FileMenu_sprite_showed"]
[connection signal="clone_pressed" from="Objects" to="CanvasLayer/Elements" method="_on_Objects_clone_pressed"]
[connection signal="menu_poped" from="Objects" to="CanvasLayer/PopupTools" method="_on_Objects_menu_poped"]
[connection signal="scene_deselected" from="Objects" to="CanvasLayer/Elements" method="_on_Objects_scene_deselected"]
[connection signal="sprite_hided" from="Objects" to="Cursor" method="_on_Objects_sprite_hided"]
[connection signal="sprite_position_updated" from="Objects" to="Cursor" method="_on_Objects_sprite_position_updated"]
[connection signal="sprite_showed" from="Objects" to="Cursor" method="_on_Objects_sprite_showed"]
[connection signal="sprite_texture_removed" from="Objects" to="Cursor" method="_on_Objects_sprite_texture_removed"]
[connection signal="sprite_texture_saved" from="Objects" to="Cursor" method="_on_Objects_sprite_texture_saved"]
[connection signal="zoom_changed" from="Camera2D" to="Objects" method="_on_Camera2D_zoom_changed"]
